[tool.poetry]
name = "sdf_expander"
version = "0.1.0"
description = "Package for the sole purpose of expanding an SDF into an HSDF"
authors = ["Andrea Nardi <buongiorno19972@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.12"
graphviz = "^0.20.1"

[tool.poetry.dev-dependencies]
yapf = "^0.40.2"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
